<resources>
    <string name="app_name">GPA Calculator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_subject">GPA Calculator</string>

    <!--Strings for GPADisplayActivity-->
    <string name="assignment">Assessment</string>
    <string name="weightage">Weightage/%</string>
    <string name="score_received">Your score</string>
    <string name="total_score">Total score</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit</string>

    <!--Strings for SubjectDisplayActivity-->
    <string name="subject_name">Subject name</string>
    <string name="add">Add</string>




    <!--Alert Dialog Strings-->
    <string name="delete">Delete</string>
    <string name="delete_subj_cfm">Are you sure you want to delete this subject?</string>
    <string name="delete_assign_cfm">Are you sure you want to delete this assignment?</string>

    <string name="title_activity_gpa">Final GPA</string>


    <!--Errors-->
    <string name="empty_error">Field cannot be empty!</string>
    <string name="weightage_101_error">Total weightage cannot be more than 100%!</string>
    <string name="score_received_total_error">Score received cannot be more than total score!</string>
    <string name="invalid_double_error">Invalid field!</string>
    <string name="empty_array_error">You have no entries!</string>
    <string name="total_weightage_101_error">Total weightage more than 100%! Remaining weightage:</string>
    <string name="total_score_0_error">Total score cannot be 0!</string>
    <string name="subject_name_empty_error">Name your subject!</string>

    <string name="name">by\nYan Wei</string>
</resources>
