<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >
    <!-- input fields -->
    <GridLayout
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:columnCount="3"
        android:rowCount="2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        android:background="@color/yellow">

        <EditText
            android:id="@+id/assignmentEditText"
            android:hint="@string/assignment"
            android:layout_column="0"
            android:layout_row="0"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:ems="9" >


        </EditText>

        <EditText
            android:id="@+id/weightageEditText"
            android:hint="@string/weightage"
            android:layout_column="1"
            android:layout_row="0"
            android:inputType="numberDecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:ems="9" >


        </EditText>

        <EditText
            android:id="@+id/scoreEditText"
            android:hint="@string/score_received"
            android:layout_column="0"
            android:layout_row="1"
            android:inputType="numberDecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:ems="9" >


        </EditText>

        <EditText
            android:id="@+id/maxScoreEditText"
            android:hint="@string/total_score"
            android:layout_column="1"
            android:layout_row="1"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:ems="9" >


        </EditText>



        <Button
            android:id="@+id/add_button"
            android:layout_column="2"
            android:layout_row="0"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:background="@color/orange"
            android:text="@string/add" />

        <TextView
            android:layout_column="2"
            android:layout_row="1"
            android:width = "50dp"
            android:layout_height="wrap_content"
            android:text="@string/name"


            />


    </GridLayout>


    <RelativeLayout
        android:id="@+id/listViewAndButtons"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_above="@+id/input"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:background="@color/brown">

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="?android:attr/buttonBarStyle">

            <Button
                android:id="@+id/clear_button"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@color/dark_red"
                android:text="@string/clear"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/calculate_button"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@color/dirty_green"
                android:text="@string/calculate"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/submit_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_blue"
                android:text="@string/submit"
                android:textColor="@color/white"
                style="?android:attr/borderlessButtonStyle"/>

        </LinearLayout>




        <!-- list items-->
        <ListView
            android:id="@+id/listView_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttons"
            android:background="@color/cream">
        </ListView>

    </RelativeLayout>

</RelativeLayout>