<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >
    <!-- input fields -->
    <GridLayout
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:columnCount="3"
        android:rowCount="2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        android:background="@color/yellow">

        <EditText
            android:id="@+id/assignment"
            android:hint="@string/assignment"
            android:layout_column="0"
            android:layout_row="0"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:ems="9" >


        </EditText>

        <EditText
            android:id="@+id/weightage"
            android:hint="@string/weightage"
            android:layout_column="1"
            android:layout_row="0"
            android:inputType="numberDecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:ems="9" >


        </EditText>

        <EditText
            android:id="@+id/score_received"
            android:hint="@string/score_received"
            android:layout_column="0"
            android:layout_row="1"
            android:inputType="numberDecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:ems="9" >


        </EditText>

        <EditText
            android:id="@+id/total_score"
            android:hint="@string/total_score"
            android:layout_column="1"
            android:layout_row="1"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:ems="9" >


        </EditText>



        <Button
            android:id="@+id/button_add"
            android:layout_column="2"
            android:layout_row="0"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:background="@color/orange"
            android:text="@string/button_submit" />

        <TextView
            android:layout_column="2"
            android:layout_row="1"
            android:width = "50dp"
            android:layout_height="wrap_content"
            android:text="@string/name"


            />


    </GridLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_above="@+id/input"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:background="@color/brown">

        <Button
            android:id="@+id/calculate_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="@color/turquoise"
            android:text="@string/calculate"
            android:layout_alignParentTop="true" />

        <Button
            android:id="@+id/clear_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/calculate_button"
            android:layout_toRightOf="@+id/calculate_button"
            android:layout_alignBottom="@+id/calculate_button"
            android:background="@color/dark_red"
            android:text="@string/clear"
            android:layout_alignParentTop="true" />


        <!-- list items-->
        <ListView
            android:id="@+id/listView_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/calculate_button"
            android:background="@color/cream">
        </ListView>

    </RelativeLayout>
</RelativeLayout>